@@ -1602,16 +1602,22 @@ extern "C" {
 #define RBIM_IMAGELIST 1
 #define RB_SETCOLORSCHEME CCM_SETCOLORSCHEME
 #define RB_GETCOLORSCHEME CCM_GETCOLORSCHEME
-#define RBBS_BREAK 1
-#define RBBS_FIXEDSIZE 2
-#define RBBS_CHILDEDGE 4
-#define RBBS_HIDDEN 8
-#define RBBS_NOVERT 16
-#define RBBS_FIXEDBMP 32
+#define RBBS_BREAK	0x0001
+#define RBBS_FIXEDSIZE	0x0002
+#define RBBS_CHILDEDGE	0x0004
+#define RBBS_HIDDEN	0x0008
+#define RBBS_NOVERT	0x0010
+#define RBBS_FIXEDBMP	0x0020
+#define RBBS_VARIABLEHEIGHT	0x0040
+#define RBBS_GRIPPERALWAYS	0x0080
+#define RBBS_NOGRIPPER	0x0100
+#if (_WIN32_IE >= 0x0500)
+#define RBBS_USECHEVRON	0x0200
 #if (_WIN32_IE >= 0x0501)
-#define RBBS_HIDETITLE 0x400
-#define RBBS_TOPALIGN 0x800
+#define RBBS_HIDETITLE	0x0400
+#define RBBS_TOPALIGN	0x0800
 #endif /* _WIN32_IE >= 0x0501 */
+#endif /* _WIN32_IE >= 0x0500 */
 #define RBBIM_STYLE 1
 #define RBBIM_COLORS 2
 #define RBBIM_TEXT 4
@@ -1689,9 +1695,6 @@ extern "C" {
 #define RBS_AUTOSIZE 8192
 #define RBS_VERTICALGRIPPER 16384
 #define RBS_DBLCLKTOGGLE  32768
-#define RBBS_VARIABLEHEIGHT 64
-#define RBBS_GRIPPERALWAYS 128
-#define RBBS_NOGRIPPER 256
 #define RBBIM_IDEALSIZE 512
 #define RBBIM_LPARAM 1024
 #define RBBIM_HEADERSIZE 2048
