@@ -1,3 +1,8 @@
+2005-07-19  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* include/commctrl.h (RBBS_USECHEVRON): Define.
+	(RBBS_*): Use hex notation, group together.
+
 2005-07-18  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* lib/kernel32.def (GetUserGeoID): Correct suffix.
